2013-06-01  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el (todos-filtered-items-mode-map): Fix omission in
	previous change.
	(todos-mode): Comment out invocation of easy-menu-add, since menu
	definition was commented out in last change.

2013-05-31  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Move auto-mode-alist entries above provide sexp.
	Update adapted diary-goto-entry, so it also works with todo items
	when the buffer in which the included todo file is processed for
	the Fancy Diary is not killed.
	(todos-insert-item-from-calendar): Move to item editing commands
	section of file.  Add doc string, use todos-basic-insert-item and
	remove mistaken invocation of todos-show.

2013-05-31  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el (todos-edit-quit): After editing an item, make sure to
	return to its category.

2013-05-31  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Clean up code.  Uncapitalize file name in first line.
	Require cl-lib instead of cl.  Add section title separators.
	Reindent some code and comments.  Comment out Todos mode menu
	definition.
	(todos-basic-insert-item): Rename from todos-insert-item-1 and
	adjust uses.
	(todos-basic-edit-item-header): Rename from
	todos-edit-item-header-1 and adjust uses.
	(todos-display-categories): Rename from todos-display-categories-1
	and adjust uses.
	(todos-show, todos-basic-insert-item)
	(todos-basic-edit-item-header, todos-set-item-priority)
	(todos-item-undone, todos-convert-legacy-files)
	(todos-check-format, todos-filter-items-1):
	Use user-error instead of error.
	(todos-add-file, todos-basic-insert-item, todos-mark)
	(todos-button, todos-sorted-column, todos-archived-only)
	(todos-search, todos-category-string)
	(todos-top-priorities-overrides)
	(todos-insertion-commands-args-genlist, todos-filter-items)
	(todos-filter-items-1, todos-filtered-items-mode-map):
	Correct or improve document string.
	(todos-edit-file)